--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ serde_json = "1.0.53"
 size = "0.1.2"
 structopt = "0.3.14"
 tui = { version = "0.9.2", default-features = false, features = ["crossterm"] }
+uom = "0.34.0"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 sysinfo = "0.14.1"
