--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "ytop"
-version = "0.6.2"
-authors = ["Caleb Bassi <calebjbassi@gmail.com>"]
+name = "yvers"
+version = "0.0.1"
+authors = ["Ahmed Eltokhy <eltokhy@aucegypt.edu>"]
 license = "MIT"
-description = "A TUI system monitor written in Rust"
-edition = "2018"
+description = "An extensible system monitor written in Rust"
+edition = "2023"
 
 [dependencies]
 battery = "0.7.5"
