--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "ytop"
-version = "0.6.2"
-authors = ["Caleb Bassi <calebjbassi@gmail.com>"]
+name = "yvers"
+version = "0.0.1"
+authors = ["Ahmed Eltokhy <eltokhy@aucegypt.edu>"]
 license = "MIT"
-description = "A TUI system monitor written in Rust"
-edition = "2018"
+description = "An extensible system monitor written in Rust"
+edition = "2021"
 
 [dependencies]
 battery = "0.7.5"
@@ -24,6 +24,7 @@ serde_json = "1.0.53"
 size = "0.1.2"
 structopt = "0.3.14"
 tui = { version = "0.9.2", default-features = false, features = ["crossterm"] }
+uom = "0.34.0"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 sysinfo = "0.14.1"
